[ADD] Data validation
